--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -107,6 +107,9 @@
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="tSQ-k7-aqj">
                                 <rect key="frame" x="280" y="400" width="39" height="37"/>
                                 <animations/>
+                                <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="280" y="400" width="40" height="37"/>
+                                </variation>
                                 <connections>
                                     <action selector="pageChanged:" destination="Fs0-u2-WIy" eventType="valueChanged" id="cB5-4U-yfR"/>
                                 </connections>
@@ -194,8 +197,12 @@
                                         <rect key="frame" x="70" y="9" width="100" height="100"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="7V8-a8-S4v"/>
-                                            <constraint firstAttribute="height" constant="100" id="Blt-9p-kaX"/>
+                                            <constraint firstAttribute="width" constant="100" id="7V8-a8-S4v">
+                                                <variation key="heightClass=regular-widthClass=regular" constant="180"/>
+                                            </constraint>
+                                            <constraint firstAttribute="height" constant="100" id="Blt-9p-kaX">
+                                                <variation key="heightClass=regular-widthClass=regular" constant="180"/>
+                                            </constraint>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMj-uf-xHi">
@@ -204,6 +211,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HgG-IB-XcR">
                                         <rect key="frame" x="10" y="166" width="29" height="14"/>
@@ -211,6 +221,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZSM-he-O88">
                                         <rect key="frame" x="59" y="184" width="64" height="14"/>
@@ -218,6 +231,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kind Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dll-Lh-YSg">
                                         <rect key="frame" x="59" y="166" width="56" height="14"/>
@@ -225,6 +241,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tW3-6w-DHM">
                                         <rect key="frame" x="10" y="184" width="35" height="14"/>
@@ -232,6 +251,9 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4BG-Cl-fmx">
                                         <rect key="frame" x="10" y="117" width="45" height="20"/>
@@ -239,36 +261,74 @@
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                        </variation>
                                     </label>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="0.94650021114864868" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="HgG-IB-XcR" firstAttribute="top" secondItem="qMj-uf-xHi" secondAttribute="bottom" constant="8" id="0Nt-n7-Pkp"/>
-                                    <constraint firstAttribute="trailing" secondItem="URO-7i-I1f" secondAttribute="trailing" constant="6" id="4Y6-ea-mAf"/>
+                                    <constraint firstItem="HgG-IB-XcR" firstAttribute="top" secondItem="qMj-uf-xHi" secondAttribute="bottom" constant="8" id="0Nt-n7-Pkp">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstAttribute="trailing" secondItem="URO-7i-I1f" secondAttribute="trailing" constant="6" id="4Y6-ea-mAf">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
                                     <constraint firstItem="dll-Lh-YSg" firstAttribute="baseline" secondItem="HgG-IB-XcR" secondAttribute="baseline" id="4uD-gG-yfu"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4BG-Cl-fmx" secondAttribute="trailing" constant="10" id="74X-Le-RfZ"/>
                                     <constraint firstItem="opJ-sP-CYM" firstAttribute="centerX" secondItem="zyb-oj-5XV" secondAttribute="centerX" id="A2q-Tf-12j"/>
                                     <constraint firstItem="61H-FE-Psm" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="3" id="CRE-cx-Zq8"/>
-                                    <constraint firstAttribute="bottom" secondItem="URO-7i-I1f" secondAttribute="bottom" constant="6" id="DfC-Yc-aNL"/>
+                                    <constraint firstAttribute="bottom" secondItem="URO-7i-I1f" secondAttribute="bottom" constant="6" id="DfC-Yc-aNL">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dll-Lh-YSg" secondAttribute="trailing" constant="10" id="EbQ-IL-ldi"/>
                                     <constraint firstItem="ZSM-he-O88" firstAttribute="baseline" secondItem="tW3-6w-DHM" secondAttribute="baseline" id="J26-1a-WJ4"/>
-                                    <constraint firstItem="tW3-6w-DHM" firstAttribute="top" secondItem="HgG-IB-XcR" secondAttribute="bottom" constant="4" id="LGa-cc-0mQ"/>
-                                    <constraint firstItem="tW3-6w-DHM" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="PRT-E9-uUY"/>
-                                    <constraint firstItem="4BG-Cl-fmx" firstAttribute="top" secondItem="opJ-sP-CYM" secondAttribute="bottom" constant="8" id="Qv4-kI-ENu"/>
+                                    <constraint firstItem="tW3-6w-DHM" firstAttribute="top" secondItem="HgG-IB-XcR" secondAttribute="bottom" constant="4" id="LGa-cc-0mQ">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstItem="tW3-6w-DHM" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="PRT-E9-uUY">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstItem="4BG-Cl-fmx" firstAttribute="top" secondItem="opJ-sP-CYM" secondAttribute="bottom" constant="8" id="Qv4-kI-ENu">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="28"/>
+                                    </constraint>
                                     <constraint firstItem="ZSM-he-O88" firstAttribute="leading" secondItem="dll-Lh-YSg" secondAttribute="leading" id="RiH-xn-AKB"/>
-                                    <constraint firstItem="URO-7i-I1f" firstAttribute="top" secondItem="ZSM-he-O88" secondAttribute="bottom" constant="10" id="Sgi-gR-PNC"/>
-                                    <constraint firstItem="HgG-IB-XcR" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="TAh-6j-5nV"/>
-                                    <constraint firstItem="4BG-Cl-fmx" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="dwz-hs-VU9"/>
-                                    <constraint firstAttribute="width" constant="240" id="jRo-fK-BpC"/>
-                                    <constraint firstItem="opJ-sP-CYM" firstAttribute="top" secondItem="zyb-oj-5XV" secondAttribute="top" constant="9" id="lG6-GJ-uQh"/>
+                                    <constraint firstItem="URO-7i-I1f" firstAttribute="top" secondItem="ZSM-he-O88" secondAttribute="bottom" constant="10" id="Sgi-gR-PNC">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstItem="HgG-IB-XcR" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="TAh-6j-5nV">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstItem="4BG-Cl-fmx" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="dwz-hs-VU9">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
+                                    <constraint firstAttribute="width" constant="240" id="jRo-fK-BpC">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="500"/>
+                                    </constraint>
+                                    <constraint firstItem="opJ-sP-CYM" firstAttribute="top" secondItem="zyb-oj-5XV" secondAttribute="top" constant="9" id="lG6-GJ-uQh">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
                                     <constraint firstItem="dll-Lh-YSg" firstAttribute="leading" secondItem="HgG-IB-XcR" secondAttribute="trailing" constant="20" id="lTz-G4-6y2"/>
-                                    <constraint firstItem="qMj-uf-xHi" firstAttribute="top" secondItem="4BG-Cl-fmx" secondAttribute="bottom" constant="4" id="mSx-zI-ob5"/>
+                                    <constraint firstItem="qMj-uf-xHi" firstAttribute="top" secondItem="4BG-Cl-fmx" secondAttribute="bottom" constant="4" id="mSx-zI-ob5">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZSM-he-O88" secondAttribute="trailing" constant="10" id="njj-JW-eQX"/>
                                     <constraint firstItem="61H-FE-Psm" firstAttribute="top" secondItem="zyb-oj-5XV" secondAttribute="top" id="oSt-a0-uXl"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="qMj-uf-xHi" secondAttribute="trailing" constant="10" id="qTY-Fg-et7"/>
-                                    <constraint firstItem="qMj-uf-xHi" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="ufc-Sc-SRH"/>
+                                    <constraint firstItem="qMj-uf-xHi" firstAttribute="leading" secondItem="zyb-oj-5XV" secondAttribute="leading" constant="10" id="ufc-Sc-SRH">
+                                        <variation key="heightClass=regular-widthClass=regular" constant="20"/>
+                                    </constraint>
                                 </constraints>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="subviews">
+                                        <exclude reference="61H-FE-Psm"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <exclude reference="CRE-cx-Zq8"/>
+                                        <exclude reference="oSt-a0-uXl"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <animations/>
